poritt/examples/errors/error-redefine.ptt
-- identity function
define id : forall (A : U) -> A -> A = \ _ x -> x

define id : U -> U = \ x -> x
